--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awal </title>
+    <!-- font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;0,800;1,400&display=swap" rel="stylesheet">
+
+<!-- css link -->
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
-    
+    <header>
+<nav>
+<h2 class="nav-title"><span class="text-primary">s</span>alam</h2>
+<ul>
+    <li><a href="">portpolio</a></li>
+    <li><a href="">blog</a></li>
+    <li><button class="btn-primary">more hire</button></li>
+</ul>
+</nav>
+    </header> 
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
