--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    <header>
+    <header class="header">
 <nav>
 <h2 class="nav-title"><span class="text-primary">s</span>alam</h2>
 <ul>
@@ -23,6 +23,13 @@
     <li><button class="btn-primary">more hire</button></li>
 </ul>
 </nav>
+<div class="banner">
+    <h3 class="banner-wcl">salam, i am</h3>
+    <h1 class="banner-title">M A Awal</h1>
+    <p>i am m a awal . i know and beliv if can doing any work insha allah thats sucsess any wea</p>
+
+</div>
+
     </header> 
 
     <main>
