--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
 </ul>
 </nav>
 <div class="banner">
-    <h3 class="banner-wcl">salam, i am</h3>
+    <div>
+        <h3 class="banner-wcl">salamun alaikum, i am</h3>
     <h1 class="banner-title">M A Awal</h1>
     <p>i am m a awal . i know and beliv if can doing any work insha allah thats sucsess any wea</p>
-
+    <button class="btn-primary">insha allah</button>
+    <button class="btn-primary">ok ?</button>
+    </div>
+    <img class="propile-pic" src="images/DSC_0045.JPG" alt="">
 </div>
+
 
     </header> 
 
