--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </ul>
 </nav>
 <div class="banner">
-    <div>
+    <div class="banner-con">
         <h3 class="banner-wcl">salamun alaikum, i am</h3>
     <h1 class="banner-title">M A Awal</h1>
     <p>i am m a awal . i know and beliv if can doing any work insha allah thats sucsess any wea</p>
@@ -34,11 +34,36 @@
     <img class="propile-pic" src="images/DSC_0045.JPG" alt="">
 </div>
 
-
     </header> 
 
     <main>
+        <section class="about">
+            <h3>আলহামদুলিল্লাহ, 
+                আলহামদুলিল্লাহ আলা কুল্ল্যি হাল।
+                </h3>
+            <p>তারা তোর নিরবতার অর্থই বুঝতে পারিনি , আমিই কিভাবেই তাদের বুঝাবো।  সত্যিকারঅর্থে তাদের ইগো বজায় রাখবে।  আমার মুর্শিদ করীম ছাবের শাহ মা.জি.আ  উছিলায় হকের সঙ্গে থাকতে চাই। কে তোর  বিষয় টি নিয়ে চিন্তা করবে দায়িত্ব কেউ নিবে না।   পরকালে ....   হবো। পৃথিবীতে টাকায় সব  তবে পরকালের জন্য নয়।
 
+            </p>
+            <div class="about-inf-cont">
+                <!-- .about-inf*4>h4.inf-title+p.inf-desc -->
+                <div class="about-inf">
+                    <h4 class="inf-title">name</h4>
+                    <p class="inf-desc">m a awal</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="inf-title">hridyr </h4>
+                    <p class="inf-desc">as</p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="inf-title">birth </h4>
+                    <p class="inf-desc">15 feb 93 and 15 dec 00 </p>
+                </div>
+                <div class="about-inf">
+                    <h4 class="inf-title">live</h4>
+                    <p class="inf-desc">our village</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
