--- a/index.html
+++ b/index.html
@@ -64,6 +64,26 @@
                 </div>
             </div>
         </section>
+<!-- what i do section -->
+        <section>
+            <h3>what i do</h3>
+            <p>আলহামদুলিল্লাহ 
+                সুস্থতা আল্লাহর বড় নিয়ামত, 
+                সল্লাল্লাহু আলাইহি ওয়াসাল্লাম। 
+                সহযোগী ও শুভাকাঙ্ক্ষী সকলের প্রতি ভালোবাসা রইলো।
+                </p>
+                <a href="https://www.youtube.com/watch?v=Kb76Pw2mGpE">css shiko</a><br><br>
+                <a href="https://www.youtube.com/watch?v=Pto1Drw6ggo">power point animation</a><br><br>
+                <a href="https://www.youtube.com/watch?v=eycxJ7IkO28">internet imd</a>
+        </section>
+
+        <section>
+            <h4> আমাদের সম্পূর্ণ কোর্সের রোড ম্যাপ কেমন জানাতে ভুলবেন না 🥰। ভালোবাসা নিবেন সবাই ❤</h4>
+                <a href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmqKGMJOtVcvGE-QrAte_95q">habluprogrammer সম্পূর্ণ কোর্স লিংক</a><br><br>
+                <a href=" https://www.facebook.com/groups/habluprogrammer">habluprogrammer আমাদের গ্রুপ লিংক</a><br><br>
+                <a href=" https://www.facebook.com/habluprogrammer">habluprogrammer আমাদের পেজ লিংক</a>
+                 
+        </section>
     </main>
 
     <footer>
