--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <body>
     <header class="header">
 <nav>
+    <marquee behavior="" direction="">Bismillah hir Rahamanir Rahim
+    </marquee>
 <h2 class="nav-title"><span class="text-primary">s</span>alam</h2>
 <ul>
     <li><a href="">portpolio</a></li>
@@ -78,12 +80,25 @@
         </section>
 
         <section>
+            <a href="https://www.youtube.com/watch?v=EOcI0C-EkwI&list=PL3Xso75sMgAGOa-G4VgkYOvDfbzn7Aoxe&index=5">Gias uddin programing hero</a>
             <h4> আমাদের সম্পূর্ণ কোর্সের রোড ম্যাপ কেমন জানাতে ভুলবেন না 🥰। ভালোবাসা নিবেন সবাই ❤</h4>
                 <a href="https://www.youtube.com/playlist?list=PLNMnAEqLBwmqKGMJOtVcvGE-QrAte_95q">habluprogrammer সম্পূর্ণ কোর্স লিংক</a><br><br>
                 <a href=" https://www.facebook.com/groups/habluprogrammer">habluprogrammer আমাদের গ্রুপ লিংক</a><br><br>
-                <a href=" https://www.facebook.com/habluprogrammer">habluprogrammer আমাদের পেজ লিংক</a>
-                 
+                <a href=" https://www.facebook.com/habluprogrammer">habluprogrammer আমাদের পেজ লিংক</a> <br><br>
+                <marquee behavior="" direction="">m a awal</marquee> <br>
+                <a href="https://www.youtube.com/watch?v=CfkwJ_PErbM">bootstrap</a> 
+
+                <marquee behavior="scroll" direction="up" scrollamount="1">M A Awal
+                </marquee>
+<marquee behavior="scroll" direction="right" scrollamount="12">ki korbo ?</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="20">freelancing</marquee>
+<marquee behavior="scroll" direction="right" scrollamount="1">web deblopment</marquee>
+
+
+                
         </section>
+
+
     </main>
 
     <footer>
