--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>আলহামদুলিল্লাহ, 
                 আলহামদুলিল্লাহ আলা কুল্ল্যি হাল।
                 </h3>
-            <p>তারা তোর নিরবতার অর্থই বুঝতে পারিনি , আমিই কিভাবেই তাদের বুঝাবো।  সত্যিকারঅর্থে তাদের ইগো বজায় রাখবে।  আমার মুর্শিদ করীম ছাবের শাহ মা.জি.আ  উছিলায় হকের সঙ্গে থাকতে চাই। কে তোর  বিষয় টি নিয়ে চিন্তা করবে দায়িত্ব কেউ নিবে না।   পরকালে ....   হবো। পৃথিবীতে টাকায় সব  তবে পরকালের জন্য নয়।
+            <p>তারা তোর নিরবতার অর্থই বুঝতে পারিনি , আমিই কিভাবেই তাদের বুঝাবো।  সত্যিকারঅর্থে তাদের ইগো বজায় রাখবে।  আমার মুর্শিদ করীম ছাবের শাহ মা.জি.আ  উছিলায় হকের সঙ্গে থাকতে চাই। কে তোর  বিষয় টি নিয়ে চিন্তা করবে ? দায়িত্ব কেউ নিবে না।   পরকালে ....   হবো। পৃথিবীতে টাকায় সব  তবে পরকালের জন্য নয়।
 
             </p>
             <div class="about-inf-cont">
@@ -88,17 +88,22 @@
                 <marquee behavior="" direction="">m a awal</marquee> <br>
                 <a href="https://www.youtube.com/watch?v=CfkwJ_PErbM">bootstrap</a> 
 
-                <marquee behavior="scroll" direction="up" scrollamount="1">M A Awal
+                <marquee behavior="scroll" direction="up" width="" height="70px"  scrollamount="1">M A Awal
                 </marquee>
 <marquee behavior="scroll" direction="right" scrollamount="12">ki korbo ?</marquee>
-<marquee behavior="scroll" direction="left" scrollamount="20">freelancing</marquee>
-<marquee behavior="scroll" direction="right" scrollamount="1">web deblopment</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="3">freelancing</marquee>
+<section behavior="scroll" direction="right" scrollamount="1">web deblopment</section>           
 
+</section>
+<section>
+    
 
-                
-        </section>
+<fieldset>
+<legend>more option after marr yet</legend>
 
+</fieldset>
 
+</section>
     </main>
 
     <footer>
